# rob456Final

devel/include/hector_costmap/: CostMapCalculationConfig.h
devel/include/hector_exploration_planner/: ExplorationPlannerConfig.h
devel/lib/hector_costmap/: hector_costmap
devel/lib/hector_exploration_node/: exploration_planner_node
devel/lib/python2.7/dist-packages/hector_costmap/cfg/: CostMapCalculationConfig.py
devel/lib/python2.7/dist-packages/hector_exploration_planner/cfg/: ExplorationPlannerConfig.py
devel/lib/simple_navigation_goals/: base_link_navigation_client  map_navigation_client
devel/share/hector_costmap/docs/: CostMapCalculationConfig-usage.dox  CostMapCalculationConfig.dox  CostMapCalculationConfig.wikidoc
devel/share/hector_exploration_planner/docs/: ExplorationPlannerConfig-usage.dox  ExplorationPlannerConfig.dox  ExplorationPlannerConfig.wikidoc
src/final_project/: rvizsetup.rviz
src/final_project/launch/: final_project.launch  hector_project.launch
src/final_project/src/: frontier_to_nav.py  testing.py
src/frontier_exploration/launch/: global_map.launch  no_global_map.launch
src/frontier_search/: CMakeLists.txt  README.md  package.xml
src/frontier_search/src/: frontier_search.py  testing.py
src/hector_navigation/hector_exploration_node/config/: costmap.yaml
src/hector_navigation/hector_exploration_node/src/: exploration_node.cpp
src/hector_navigation/hector_exploration_planner/cfg/: ExplorationPlanner.cfg
src/hector_navigation/hector_exploration_planner/src/: hector_exploration_planner.cpp
src/stagebot_2dnav/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
